--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.4.*",
 		"laravelcollective/html": "~5.3",
-		"barryvdh/laravel-snappy": "^0.3.0",
-		"guzzlehttp/guzzle": "~6.0"
+		"barryvdh/laravel-snappy": "^0.4.0",
+		"guzzlehttp/guzzle": "~6.0",
+        "predis/predis": "^1.1",
+		"bschmitt/laravel-amqp": "1.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -21,7 +23,6 @@
     "autoload": {
         "classmap": [
             "database",
-			"app/Models/Services",
 			"app/Helpers"
         ],
         "psr-4": {
