--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,21 @@ language: php
 
 php:
   - 5.6
+
+addons:
+  mariadb: 10.4
+
+cache:
+  directories:
+    - node_modules
+    - vendor
+
+before_script:
+  - cp .env.travis .env
+  - sudo mysql -e 'CREATE DATABASE testing;'
+  - composer self-update
+  - composer install --no-interaction
+  - php artisan migrate --no-interaction -vvv
+
+script:
+  - vendor/bin/phpunit
