--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,10 @@ cache:
 
 before_script:
   - cp .env.travis .env
-  - sudo mysql -e 'CREATE DATABASE testing;'
+  - sudo mysql -e 'CREATE DATABASE larvela;'
   - composer install --no-interaction
   - php artisan migrate --no-interaction -vvv
+  - php artisan db:seed --no-interaction -vvv
 
 script:
   - vendor/bin/phpunit
