--- a/.env.travis
+++ b/.env.travis
@@ -2,11 +2,11 @@ APP_ENV=testing
 APP_KEY=ZBM/os2LNlvNj9E8/uC+61WSwD4QkbHjjDaDsxbxx/4=
 
 DB_DATABASE=larvela
-DB_USERNAME=larvela
+DB_USERNAME=root
 DB_PASSWORD=
 DB_CONNECTION=larvela
-DB_TEST_USERNAME=larvela
-DB_TEST_PASSWORD=larvela
+DB_TEST_USERNAME=root
+DB_TEST_PASSWORD=
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
