--- a/.env.travis
+++ b/.env.travis
@@ -1,10 +1,10 @@
 APP_ENV=testing
 APP_KEY=ZBM/os2LNlvNj9E8/uC+61WSwD4QkbHjjDaDsxbxx/4=
 
-DB_DATABASE=larvela
+DB_DATABASE=testing
 DB_USERNAME=root
 DB_PASSWORD=
-DB_CONNECTION=larvela
+DB_CONNECTION=testing
 DB_TEST_USERNAME=root
 DB_TEST_PASSWORD=
 
