--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,11 @@ cache:
   directories:
     - node_modules
     - vendor
+before_install:
+  - mysql -e 'create database if not exists testing;'
 
 before_script:
   - cp .env.travis .env
-  - sudo mysql -e 'CREATE DATABASE testing;'
   - composer install --no-interaction
   - php artisan key:generate
   - php artisan migrate -vvv
