--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ before_install:
 
 before_script:
   - cp .env.travis .env
-  - mysql -e 'create database if not exists testing;'
+  - whoami
+  - sudo mysqladmin create testing
   - composer install --no-interaction
   - php artisan key:generate
   - php artisan migrate -vvv
