--- a/.env.travis
+++ b/.env.travis
@@ -2,11 +2,12 @@ APP_ENV=testing
 APP_KEY=ZBM/os2LNlvNj9E8/uC+61WSwD4QkbHjjDaDsxbxx/4=
 
 DB_DATABASE=testing
-DB_USERNAME=travis
-DB_PASSWORD=
+DB_USERNAME=root
+DB_PASSWORD=''
 DB_CONNECTION=testing
-DB_TEST_USERNAME=travis
-DB_TEST_PASSWORD=
+DB_TEST_USERNAME=root
+DB_TEST_PASSWORD=''
+
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
