--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_install:
 before_script:
   - cp .env.travis .env
   - sudo mysqladmin create testing
+  - sudo mysql -e 'GRANT ALL PRIVILEGES ON testing.* to travis@localhost';
+  - sudo mysql -e 'GRANT ALL PRIVILEGES ON testing.* to root@localhost';
   - composer install --no-interaction
   - php artisan key:generate
   - php artisan migrate -vvv
