Changed DB details for travis-ci

--- a/.env.travis
+++ b/.env.travis
@@ -3,10 +3,10 @@ APP_KEY=ZBM/os2LNlvNj9E8/uC+61WSwD4QkbHjjDaDsxbxx/4=
 
 DB_DATABASE=testing
 DB_USERNAME=root
-DB_PASSWORD=''
+DB_PASSWORD='password'
 DB_CONNECTION=testing
 DB_TEST_USERNAME=root
-DB_TEST_PASSWORD=''
+DB_TEST_PASSWORD='password'
 
 
 CACHE_DRIVER=array
