Changed DB details for travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
   - cp .env.travis .env
   - sudo mysqladmin create testing
   - sudo mysql -e "grant all privileges on testing.* to 'root'@'localhost'";
-  - sudo mysql -e "update mysql.user set password=PASSWORD('password') where user='root'";
+  - sudo mysql -e "update mysql.user set Password=PASSWORD('password') where User='root'";
   - composer install --no-interaction
   - php artisan key:generate
   - php artisan migrate -vvv
