Changed DB details for travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,11 @@ before_install:
 
 before_script:
   - cp .env.travis .env
+  - sudo mysql_upgrade
+  - sudo service mysql restart
   - sudo mysqladmin create testing
-  - sudo mysql -e "grant all privileges on testing.* to 'root'@'localhost'"
-  - sudo mysql -e "update mysql.user set user.Password=PASSWORD('password') where user.User='root'"
+  - sudo mysql -e "grant all privileges on testing.* to 'root'@'%'"
+  - mysql -e "update mysql.user set user.Password=PASSWORD('password') where user.User='root' and user.Host='%'"
   - composer install --no-interaction
   - php artisan key:generate
   - php artisan migrate -vvv
