--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ before_script:
   - sudo mysql_upgrade
   - sudo service mysql restart
   - sudo mysqladmin create testing
-  - sudo mysql -e "grant all privileges on testing.* to 'root'@'%'"
-  - mysql -e "update mysql.user set user.Password=PASSWORD('password') where user.User='root' and user.Host='%'"
+  - sudo mysql -e "grant all privileges on testing.* to 'root'@'localhost'"
+  - mysql -e "update mysql.user set user.Password=PASSWORD('password') where user.User='root' and user.Host='localhost'"
   - composer install --no-interaction
   - php artisan key:generate
   - php artisan migrate -vvv
