Changed DB details for travis-ci

--- a/.env.travis
+++ b/.env.travis
@@ -2,11 +2,11 @@ APP_ENV=testing
 APP_KEY=ZBM/os2LNlvNj9E8/uC+61WSwD4QkbHjjDaDsxbxx/4=
 
 DB_DATABASE=testing
-DB_USERNAME=root
-DB_PASSWORD='password'
+DB_USERNAME=larvelatest
+DB_PASSWORD=[P8rs3w0rd]
 DB_CONNECTION=testing
-DB_TEST_USERNAME=root
-DB_TEST_PASSWORD='password'
+DB_TEST_USERNAME=larvelatest
+DB_TEST_PASSWORD=[P8rs3w0rd]
 
 
 CACHE_DRIVER=array
