--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - sudo mysql_upgrade
   - sudo service mysql restart
   - sudo mysqladmin create testing
-  - sudo mysql -e "create user 'larvelatest'@'localhost' identified by '[P8rs3w0rd]';
+  - sudo mysql -e "create user 'larvelatest'@'localhost' identified by '[P8rs3w0rd]'"
   - sudo mysql -e "grant all privileges on testing.* to 'larvelatest'@'localhost'"
   - composer install --no-interaction
   - php artisan key:generate
