--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
 			"app/Helpers"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+			"Tests\\": "tests/"
         }
     },
     "autoload-dev": {
