--- a/composer.json
+++ b/composer.json
@@ -23,18 +23,17 @@
     },
     "autoload": {
         "classmap": [
-		    "tests",
             "database",
 			"app/Helpers"
         ],
         "psr-4": {
-            "App\\": "app/",
-			"Tests\\": "tests/"
+            "App\\": "app/"
         }
     },
     "autoload-dev": {
         "classmap": [
-            "tests/TestCase.php"
+            "tests",
+			"database/"
         ]
     },
     "scripts": {
